Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/RecruiterBot_Question__c.object-meta.xml
<CustomObject>
    <label>RecruiterBot Question</label>
    <nameField>
        <label>Question Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecruiterBot Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>