Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/fields/Choice_Count__c.field-meta.xml
<CustomField>
    <fullName>Choice_Count__c</fullName>
    <label>Choice Count</label>
    <summaryForeignKey>RecruiterBot_Question_Choice__c.RecruiterBot_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>