Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/fields/Dropout__c.field-meta.xml
<CustomField>
    <fullName>Dropout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dropout</label>
    <type>Checkbox</type>
</CustomField>