Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/fields/Dropout_Value__c.field-meta.xml
<CustomField>
    <fullName>Dropout_Value__c</fullName>
    <label>Dropout Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>