Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <label>Number Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>