Frankbelford/uatv1ba/force-app/main/default/objects/RecruiterBot_Question__c/fields/RecruiterBot__c.field-meta.xml
<CustomField>
    <fullName>RecruiterBot__c</fullName>
    <label>RecruiterBot</label>
    <referenceTo>Recruiterbot__c</referenceTo>
    <relationshipLabel>RecruiterBot Questions</relationshipLabel>
    <relationshipName>RecruiterBot_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>